Styled entire layout

--- a/style.css
+++ b/style.css
@@ -1,20 +1,82 @@
-h1 {
+body {
+  color: #0B2027;
+  background-color: #ffffff;
+}
+
+.simpleSection {
+  background-color: #546A7B;
+}
+
+.groceryStore, .boxStore, .homeImprovementStore {
+  min-height: 300px;
+  border-radius: 22px;
+  border: 2.5px solid #9EA3B0;
+}
+
+.groceryStore h2,
+.boxStore h2,
+.homeImprovementStore h2 {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background: #9EA3B0;
+}
+
+.boxStore {
+  border: 2.5px solid #f7d1cf;
+}
+
+.boxStore h2 {
+  background: #f7d1cf;
+}
+
+.homeImprovementStore {
+  border: 2.5px solid #E4C3AD;
+}
+
+.homeImprovementStore h2 {
+  background: #E4C3AD;
+}
+
+h1, h2, form {
   text-align: center;
-  text-decoration: underline;
+  margin: 0;
 }
 
-.container, .category {
-  border: 1px solid black;
-  height: 100px;
+h1 {
+  padding: 25px 0;
+  font-weight: bold;
+  border-bottom: 2.5px solid #0B2027;
+  border-radius: 25%;
 }
 
+h3 {
+  margin: 5px;
+}
 
-.categorize {
+input, select {
+  border-radius: 5px;
+}
+
+.container {
   display: flex;
   justify-content: space-around;
-  margin: 2% 0;
+  margin-top: 25px;
+  border-radius: 25px;
+}
+
+.simpleSection{
+  flex-direction: column;
+  height: 100px;
+  width: 33.3%;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .category {
   width: 30%;
+}
+
+.btn {
+  background: #ffffff;
 }
